fix: add software
